syntax = "proto3";

option csharp_namespace = "Proto.Messages";

/**
 * 
 */
message HelloMessage {
  string message = 1;
}
