syntax = "proto3";

import "hello.proto";

option csharp_namespace = "Proto.Services";

/**
 * 
 */
service HelloService {
  rpc SayHello(HelloMessage) returns (HelloMessage) {}
}
